--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -57,7 +57,7 @@
         <!-- <div class="layer-light-squares"> </div> -->
         <div class="media">
             <app-media [mediaType]="'video'"
-                [mediaURL]="'http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4'"></app-media>
+                [mediaURL]="'../../assets/tom_jerry.mp4'"></app-media>
 
         </div>
     </div>
