--- a/src/app/shared/counter-card/counter-card.component.html
+++ b/src/app/shared/counter-card/counter-card.component.html
@@ -1,7 +1,7 @@
 <!-- Counter Card section  -->
 <div class="counter-card" [ngClass]="{'mobile':isMobile}" >
     <div>
-        <h1 class="col-counter-num">{{number}}</h1>
+        <h1 class="col-counter-num">{{currentCount}}+</h1>
     </div>
 
     <div>
