--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -8,22 +8,24 @@
     box-sizing: border-box;
 }
 
-.main-nav,.poster-nav{
+.main-nav,
+.poster-nav {
     display: flex;
     flex: 100%;
     justify-content: space-between;
     margin-bottom: 50px;
 
     .navbar a {
-        flex:1;
+        flex: 1;
         text-decoration: none;
-        padding:10px 40px;
+        padding: 10px 40px;
         font-size: $s-font ;
-        line-height: 18px ;
-        font-weight: 600 ;
+        line-height: 18px;
+        font-weight: 600;
+        max-width: fit-content;
 
         @media screen and (max-width: 800px) {
-            padding:5px !important;
+            padding: 5px !important;
         }
     }
 
@@ -36,62 +38,74 @@
         color: $brand;
         border-radius: 100px;
     }
-    
+
     .contact-btn {
-        width: 148px ;
+        width: 148px;
         border-radius: 47px;
         height: 40px;
- 
+
         @media screen and (max-width: 800px) {
             width: 100px !important;
         }
 
     }
-    .logo-img{
+
+    .logo-img {
         cursor: pointer;
-        
+
         @media screen and (max-width: 800px) {
             width: 100px !important;
         }
     }
 }
 
-.main-nav{
+.main-nav {
     margin-top: 50px;
+
     .navbar a {
         color: $brand;
     }
+
     .navbar a.active {
         background-color: $active-link-bg;
         color: $brand;
     }
+
     .navbar a:hover {
         background-color: $active-link-bg;
         color: $brand;
     }
+
     .contact-btn {
         background-color: $brand;
         color: $white;
     }
+
     .navbar a {
         @media screen and (max-width: 1000px) {
             padding: 15px;
         }
     }
 }
-.poster-navbar,.contact-navbar{
+
+.poster-navbar,
+.contact-navbar {
     margin-top: 0px;
+
     .navbar a {
         color: $white ;
     }
+
     .navbar a.active {
         background-color: $active-link-bg-light ;
         color: $white ;
     }
+
     .navbar a:hover {
         background-color: $active-link-bg-light ;
         color: $white ;
     }
+
     .contact-btn {
         background-color: $white ;
         color: $brand ;
@@ -103,3 +117,5 @@
         }
     }
 }
+
+
