--- a/src/app/shared/overview/overview.component.html
+++ b/src/app/shared/overview/overview.component.html
@@ -1,7 +1,7 @@
 <!-- Overview section  -->
-<div [ngClass]=" light == 'yes' ? 'light overview' : 'overview'"> 
+<div [ngClass]=" light == 'yes' ? 'light overview' : 'overview'">
 
-    <div class="h-overview" [ngClass]="{'mobile': isMobile}">
+    <div class="h-overview" [ngClass]="{'mobile': isMobile}" *ngIf="pageTitle">
         <div class="tit-div">
             <div [@slideFromTop2]>
                 <img *ngIf="light == 'yes'" class="rect" src="./../../../assets/Rectangle-white.svg" alt="rectangle"
@@ -11,8 +11,9 @@
                 <h1 class="black">{{pageTitle}}</h1>
             </div>
         </div>
+        <div class="spacer-div" *ngIf="!isMobile"></div>
     </div>
-    <div class="spacer-div" *ngIf="!isMobile"></div>
+
     <p class="overview-p" [@slideFromTop] [ngClass]="{'mobile': isMobile}">
         {{pageOverviewText}}
     </p>
