--- a/src/app/shared/we-are-card/we-are-card.component.html
+++ b/src/app/shared/we-are-card/we-are-card.component.html
@@ -7,7 +7,8 @@
         <div class="tit-div">
             <div [@fadeInFromTop2]>
                 <img class="rect" src="./../../../assets/Rectangle-blue.svg" alt="rectangle">
-                <p class="h-title">We are</p>
+                <p class="h-title">WE ARE</p>
+                <div class="spacer-div"></div>
             </div>
             <h1 [@slideInFromRight]>Leaders in Management</h1>
         </div>
@@ -17,7 +18,8 @@
             being fully committed and transparent to its dealings ensuring, efficiency and effectiveness in all aspects
             of today’s business requirements.
         </p>
-        <button type="button" class="btn btn-primary contact-btn" [@slideInFromRight]>
+        <div class="spacer-div"></div>
+        <button type="button" class="btn btn-primary contact-btn" [@slideInFromRight]  [routerLink]="'/contact'">
             GET IN TOUCH
             <i class="bi bi-arrow-up-right"></i>
 
