--- a/src/app/shared/why-choose/why-choose.component.scss
+++ b/src/app/shared/why-choose/why-choose.component.scss
@@ -28,6 +28,10 @@
                     margin-top: 10px;
                 }
             }
+            span.breadcrumb{
+                padding-right: 25px;
+
+            }
         }
     }
 
