--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -2,14 +2,7 @@
 
 .contact {
     .background-container {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
-        height: 180%;
-        overflow: hidden;
-        z-index: -1;
-
         .first-bg {
             position: absolute;
             top: 0;
@@ -33,6 +26,7 @@
 
 
     .contact-form-wrapper {
+        position: relative;
         margin: 30px;
     }
 }
