--- a/src/app/shared/mission-slider/mission-slider.component.scss
+++ b/src/app/shared/mission-slider/mission-slider.component.scss
@@ -6,10 +6,11 @@
       .icon-mission-card {
           i {
               color: $white;
-              font-size: $md-font-p;
+              font-size: $p-font;
               background-color: $brand;
-              padding: 15px;
+              padding: 11px;
               border-radius: 24px;
+
           }
       }
 
@@ -25,7 +26,7 @@
       }
 
       .mission-card-description {
-          max-width: 200px;
+          max-width: fit-content;
           color:$mid-grey;
           font-weight: 500;
           size: 13px;
