--- a/src/app/shared/we-are-card/we-are-card.component.scss
+++ b/src/app/shared/we-are-card/we-are-card.component.scss
@@ -36,8 +36,8 @@
 
         h1 {
             font-weight: 700;
-            line-height: 30px;
-            font-size: $contact-tit;
+            line-height: 60px;
+            font-size: $h1-font;
         }
     }
 
@@ -52,6 +52,7 @@
     .contact-btn {
         min-width: 217px;
         padding: 20px;
+        border-radius: 0px;
 
         i {
             margin-left: 10px;
@@ -87,6 +88,7 @@
     }
     .contact-btn{
         border-radius: 0px;
+        cursor: pointer;
     }
 
 }
