--- a/src/app/shared/we-are-home/we-are-home.component.html
+++ b/src/app/shared/we-are-home/we-are-home.component.html
@@ -3,7 +3,7 @@
     <div class="we-are-left-div">
         <span class="box-title">
             <h3 [@fadeInFromLeft]>Our Work </h3>
-            <i class="bi bi-arrow-up-right" [@fadeInFromTop]></i>
+            <!-- <i class="bi bi-arrow-up-right" [@fadeInFromTop]></i> -->
         </span>
         <div class="three-rings">
             <!-- <img [@enterFromBottomLeftToTopRight1] src="../../../assets/inner-circle.svg" alt="inner" />
