--- a/src/styles.scss
+++ b/src/styles.scss
@@ -436,3 +436,47 @@ app-footer::before {
         right: 10px;
     }
 }
+
+
+
+
+:host {
+    display: block;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: $brand;
+    padding: 50px !important;
+    margin-top: 0px !important;
+    padding-bottom: 50px !important;
+
+    .navbar a {
+        color: $white !important;
+    }
+
+    .navbar a.active {
+        background-color: $active-link-bg-light !important ;
+        color: $white ;
+    }
+
+    .navbar a:hover {
+        background-color: $active-link-bg-light ;
+        color: $white ;
+    }
+
+    .contact-btn {
+        background-color: $white ;
+        color: $brand ;
+    }
+
+    .navbar a {
+        @media screen and (max-width: 1000px) {
+            padding: 15px;
+        }
+    }
+}
