--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <!-- Main nav section works for only web not mobile  -->
 <div class="main-nav"  [ngClass]="{'contact-navbar': isContact , 'poster-navbar': isHome , 'sticky':isSticky}">
-  <img class="logo-img"  src="assets/logo.svg" alt="logo"  [@slideFromLeft]   [routerLink]="'/home'"/>
+  <img class="logo-img"  src="assets/Milaya-main-logo.svg" alt="logo"  [@slideFromLeft]   [routerLink]="'/home'"/>
     <!-- <img class="logo-img" *ngIf="isHome !== true && isContact !== true" src="assets/logo.svg" alt="logo"  [@slideFromLeft]   [routerLink]="'/home'"/> -->
     <!-- <img class="logo-img" *ngIf="isHome == true || isContact == true" src="assets/logo-light.svg" alt="logo"  [@slideFromLeft]   [routerLink]="'/home'"/> -->
     
