--- a/src/styles.scss
+++ b/src/styles.scss
@@ -449,9 +449,9 @@ app-footer::before {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 999999999999999999999 !important;
     background-color: $brand;
-    padding: 50px !important;
+    padding: 30px !important;
     margin-top: 0px !important;
     padding-bottom: 50px !important;
 
