media and fixes

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,7 +3,6 @@
     <app-overview [pageTitle]="'About Us'"
         [pageOverviewText]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.'"></app-overview>
     <div class="spacer-div"></div>
-
     <app-we-are-card></app-we-are-card>
     <div class="spacer-div"></div>
 
@@ -40,8 +39,6 @@
 <div class="container">
     <!-- <app-media [mediaType]="'video'"
         [mediaURL]="'http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4'"></app-media> -->
-    <app-media [mediaType]="'video'" [mediaURL]="'../../assets/tom_jerry.mp4'"></app-media>
+    <app-media [mediaType]="'video'" [mediaURL]="'https://milayacapital.ae/wp-content/uploads/2023/05/Milaya-Web-Video.mp4'"></app-media>
 </div>
 <app-footer> </app-footer>
-
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/5oH9Nr3bKfw?si=Tv9GV9U9hJzOdsgx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
