--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -52,13 +52,11 @@
         <app-clients></app-clients>
     </div>
 
-
     <div class="fifth-bg">
         <!-- <div class="layer-light-squares"> </div> -->
         <div class="media">
             <app-media [mediaType]="'video'"
-                [mediaURL]="'../../assets/tom_jerry.mp4'"></app-media>
-
+                [mediaURL]="'https://milayacapital.ae/wp-content/uploads/2023/05/Milaya-Web-Video.mp4'"></app-media>
         </div>
     </div>
 
