--- a/src/app/shared/heights-slider/heights-slider.component.html
+++ b/src/app/shared/heights-slider/heights-slider.component.html
@@ -8,9 +8,9 @@
                         <img alt="heights-card" [src]="slide.img">
                     </div>
                     <div class="data-container">
-                        <div class="icon-height-slider-card">
+                        <!-- <div class="icon-height-slider-card">
                             <i [class]="slide.icon"></i>
-                        </div>
+                        </div> -->
                         <p class="heights-slider-card-num">
                             {{slide.num}}
                         </p>
