--- a/src/app/shared/why-choose-card/why-choose-card.component.html
+++ b/src/app/shared/why-choose-card/why-choose-card.component.html
@@ -6,7 +6,7 @@
                 <img src="{{src}}"  alt="stat"/>
             </div>
             <div class="col-9">
-                <span class="learn-more">Learn More </span>   <i class="bi bi-arrow-right"></i>
+                <!-- <span class="learn-more">Learn More </span>   <i class="bi bi-arrow-right"></i> -->
             </div>
         </div>
         <h4 class="title">{{title}}</h4>
