--- a/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
+++ b/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="d-flex contact-button" [@fadeInFromTop1]>
             <div class="contact-btn-col">
-                <button type="submit" class="btn btn-primary">
+                <button type="button" class="btn btn-primary"   (click)="navigateToExternalLink()">
                     MILAYAENERGY.COM
                     <i class="bi bi-arrow-up-right"></i>
                 </button>
