--- a/src/styles.scss
+++ b/src/styles.scss
@@ -437,30 +437,25 @@ app-footer::before {
     }
 }
 
-
-
-
 :host {
     display: block;
 }
 
 .sticky {
-    position: fixed;
-    top: 0;
+    position: fixed !important;
+    top: 0 !important;
     left: 0;
+    right: 0;
     width: 100%;
-    z-index: 999999999999999999999 !important;
-    background-color: $brand;
-    padding: 30px !important;
-    margin-top: 0px !important;
-    padding-bottom: 50px !important;
+    min-height: 10vh !important;
+    z-index: 1000 !important;
 
     .navbar a {
         color: $white !important;
     }
 
     .navbar a.active {
-        background-color: $active-link-bg-light !important ;
+        background-color: $active-link-bg-light !important;
         color: $white ;
     }
 
@@ -472,6 +467,13 @@ app-footer::before {
     .contact-btn {
         background-color: $white ;
         color: $brand ;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-right: 50px;
+    }
+
+    .logo-img {
+        margin-left: 50px;
     }
 
     .navbar a {
@@ -480,3 +482,47 @@ app-footer::before {
         }
     }
 }
+
+.sticky.poster-navbar {
+    background: $bg-layer ;
+}
+
+.sticky.contact-navbar {
+    background: $white !important;
+
+    .navbar a {
+        color: $brand !important;
+    }
+
+    .navbar a.active {
+        background-color: $active-link-bg !important;
+        color: $brand !important;
+    }
+
+    .navbar a:hover {
+        background-color: $active-link-bg !important;
+        color: $brand !important;
+    }
+
+    .contact-btn {
+        background-color: $brand !important;
+        color: $white !important;
+    }
+}
+
+.sticky {
+    background: $brand;
+    margin-top: 0px !important;
+    border-bottom: solid 0.5px $mid-grey;
+    .contact-btn {
+        background-color: $white !important;
+        color: $brand !important;
+    }
+}
+
+
+// .scroll-dwn{
+//     .sticky{
+//         margin-top: 20px !important;
+//     }
+// }
