--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,8 +5,7 @@
             <img class="footer-logo" src="assets/logo-footer.svg" alt="logo"
                 [@enterFromTop]="animationStates.enterFromTop">
             <p class="footer-description" [@enterFromTop]="animationStates.enterFromTop">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod. Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit, sed do eiusmod
+                Strategic investments, experts in accelerating change for businesses and individuals
             </p>
             <div class="wrap-email-sm" *ngIf="!isMobile">
                 <!-- <div class="input-group mb-3 footer-input" [@enterFromTop2]="animationStates.enterFromTop">
