--- a/src/app/pages/clients/clients.component.scss
+++ b/src/app/pages/clients/clients.component.scss
@@ -30,6 +30,12 @@
         margin-left: auto;
 
     }
+
+    .logo-img{
+        img{
+            width: 200px !important;
+        }
+    }
 }
 
 .clients.mobile {
