--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -8,11 +8,11 @@
 
     <div class="we-are-cards container">
         <div [@enterFromTop1]="animationStates.enterFromTop1" class="card1">
-            <app-we-are-img-text-card [WeAreTitleCard]="'WE ARE DYNAMIC'"
+            <app-we-are-img-text-card [image]="'../../../assets/we-are-img-card-1.svg'" [WeAreTitleCard]="'WE ARE DYNAMIC'"
                 [WeAreDescriptionCard]="'Being a dynamic, DUBAI based, venture capital business, Milaya Capital owns a portfolio of exciting brands that prosper in the local retail and property industries. Even though relatively young, Milaya Capital’s growth across different sectors has been exponential.'"></app-we-are-img-text-card>
         </div>
         <div [@enterFromTop2]="animationStates.enterFromTop2" class="card2">
-            <app-we-are-img-text-card [WeAreTitleCard]="'OUR VISION'"
+            <app-we-are-img-text-card [image]="'../../../assets/aboutus-secondimg.jpg'" [WeAreTitleCard]="'OUR VISION'"
                 [WeAreDescriptionCard]="'Milaya Capital’s vision is to create a better tomorrow for the generations to come. A world where we can live in, a sustainable future hence we pay all our efforts in being environmentally sustainable throughout our company’s operations.'"></app-we-are-img-text-card>
         </div>
     </div>
