--- a/src/app/shared/portfolio-vertical-card/portfolio-vertical-card.component.html
+++ b/src/app/shared/portfolio-vertical-card/portfolio-vertical-card.component.html
@@ -40,7 +40,7 @@
             <img alt="portfolio" src="{{image}}">
         </div>
         <div class="text-side">
-            <app-what-we-do-card-2 class="portfolio" backgroundImage="assets/bg-card1.svg"
+            <app-what-we-do-card-2 class="portfolio" backgroundImage="{{backgroundImage}}"
             [alignment]="'top'" title="{{title}}"
             description="{{description}}"></app-what-we-do-card-2>
             <!-- <app-what-we-do-card-2 class="portfolio" [backgroundImage]="'../../../assets/bg-card1.svg'"
