--- a/src/app/shared/we-are-img-text-card/we-are-img-text-card.component.html
+++ b/src/app/shared/we-are-img-text-card/we-are-img-text-card.component.html
@@ -1,7 +1,8 @@
 <!-- We are image and text card section  -->
 <div class="container we-are-img-text"  [ngClass]="{'mobile':isMobile}" >
     <div>
-        <img class="imgwearecard" alt="wearecard" src="../../../assets/we-are-img-card-1.svg">
+        <!-- <img class="imgwearecard" alt="wearecard" src="../../../assets/we-are-img-card-1.svg"> -->
+        <img class="imgwearecard" alt="wearecard" src="{{image}}">
     </div>
     <h3> 
         {{WeAreTitleCard}}
