--- a/src/app/shared/we-are-img-text-card/we-are-img-text-card.component.scss
+++ b/src/app/shared/we-are-img-text-card/we-are-img-text-card.component.scss
@@ -7,8 +7,13 @@
     background: linear-gradient(150deg, rgba(217, 217, 217, 0.90) 3.9%, rgba(217, 217, 217, 0.10) 91.59%);
     backdrop-filter: blur(25px);
 
-    .imgwearecard{
+    .imgwearecard {
         width: 100%;
+        height: 350px;
+        object-fit: cover;
+        object-position: center center;
+        border-radius: 10px 10px 10px 10px;
+
     }
     h3{
         color: $brand;
